@@ -2,6 +2,7 @@ Bower 0.9-unreleased
 ====================
 
 * Show pager progress as percentage of current message.
+* Add ',' key to go to next unread thread/message (synonym for Tab).
 
 Bower 0.8.1 (2018-04-01)
 ========================
